--- a/app/src/main/res/xml/serviceconfig.xml
+++ b/app/src/main/res/xml/serviceconfig.xml
@@ -17,12 +17,9 @@
   ~
   -->
 
-<accessibility-service
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
 	android:accessibilityEventTypes="typeViewClicked|typeViewFocused"
-	android:accessibilityFeedbackType="feedbackSpoken"
+	android:accessibilityFeedbackType="feedbackVisual"
 	android:canRetrieveWindowContent="true"
 	android:notificationTimeout="100"
-	android:packageNames="com.example.android.myFirstApp, com.example.android.mySecondApp"
-	android:settingsActivity="com.example.android.apis.accessibility.TestBackActivity"
-	/>
+	android:packageNames="com.facebook.android" />
